framec_tests/language_specific/c/v3_mir/positive/inside_comment_transition_ignored.frm
@target c

system S {
    machine:
        $A {
            e() {
                // comment with -> $B() and => $^
                native();
            }
        }
}

