framec_tests/language_specific/c/v3_mir/negative/native_after_terminal.frm
@target c

system S {
    machine:
        $A {
            e() {
                -> $B()
                int x = 1; // native after terminal
            }
        }
}

